--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "OAuth client for implicit flow",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "standard",
+    "precommit": "npm run lint"
   },
   "author": "Bradley DeJong",
   "license": "ISC",
   "devDependencies": {
     "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
-    "jest": "^20.0.4"
+    "husky": "^0.14.3",
+    "jest": "^20.0.4",
+    "standard": "^10.0.3"
   },
   "dependencies": {
+    "ramda": "^0.24.1",
     "superagent": "^3.6.0"
   },
   "jest": {
