--- a/package.json
+++ b/package.json
@@ -13,17 +13,15 @@
   "devDependencies": {
     "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "folktale": "^2.0.1",
     "ramda": "^0.24.1",
     "superagent": "^3.6.0"
   },
-  "jest": {
-    "roots": [
-      "src"
-    ]
-  }
+  "jest": {}
 }
