--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mayo-oauth",
   "version": "0.1.0",
   "description": "OAuth client for implicit flow",
-  "main": "src/authorize.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "lint": "standard",
